[gd_scene load_steps=4 format=2]

[ext_resource path="res://level-select.gd" type="Script" id=1]
[ext_resource path="res://tILESET.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy_loading_screen.tscn" type="PackedScene" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldLayout" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 14, 0, 1, 14, 2, 2, 14, 1, 3, 14, 3, 4, 14, 2, 5, 14, 3, 6, 14, 1, 7, 14, 3, 8, 14, 2, 9, 14, 2, 10, 14, 4, 11, 7, 0, 12, 14, 0, 13, 14, 1, 14, 14, 2, 15, 14, 3, 16, 14, 2, 17, 14, 4, 18, 7, 0, 19, 14, 0, 20, 14, 3, 21, 14, 2, 22, 14, 1, 23, 14, 3, 24, 14, 3, 25, 14, 3, 26, 14, 3, 27, 14, 3, 28, 14, 1, 29, 14, 4, 65536, 14, 65536, 65537, 14, 131074, 65538, 14, 65537, 65539, 14, 131074, 65540, 14, 65538, 65541, 14, 65537, 65542, 14, 65537, 65543, 14, 131074, 65544, 14, 65539, 65545, 14, 65539, 65546, 14, 65540, 65547, 7, 0, 65548, 14, 131072, 65549, 14, 131075, 65550, 14, 131074, 65551, 14, 131073, 65552, 14, 65537, 65553, 14, 131076, 65554, 7, 0, 65555, 14, 131072, 65556, 14, 65539, 65557, 14, 131075, 65558, 14, 131073, 65559, 14, 65539, 65560, 14, 65537, 65561, 14, 65538, 65562, 14, 65537, 65563, 14, 65539, 65564, 14, 131073, 65565, 14, 65540, 131072, 14, 65536, 131073, 14, 65539, 131074, 14, 131073, 131075, 14, 65539, 131076, 14, 65539, 131077, 14, 65538, 131078, 14, 131073, 131079, 14, 131075, 131080, 14, 65538, 131081, 14, 65538, 131082, 14, 65540, 131083, 7, 0, 131084, 14, 196608, 131085, 14, 196609, 131086, 14, 196610, 131087, 14, 0, 131088, 14, 65538, 131089, 14, 65540, 131090, 7, 0, 131091, 14, 131072, 131092, 14, 65539, 131093, 14, 65538, 131094, 14, 65538, 131095, 14, 65537, 131096, 14, 65539, 131097, 14, 65539, 131098, 14, 65539, 131099, 14, 131073, 131100, 14, 131074, 131101, 14, 131076, 196608, 14, 65536, 196609, 14, 65539, 196610, 14, 131074, 196611, 14, 65537, 196612, 14, 131075, 196613, 14, 131075, 196614, 14, 131073, 196615, 14, 131073, 196616, 14, 0, 196617, 14, 196609, 196618, 14, 196612, 196619, 7, 0, 196620, 8, 0, 196621, 8, 0, 196622, 8, 0, 196623, 14, 131072, 196624, 14, 131073, 196625, 14, 65540, 196626, 7, 0, 196627, 14, 131072, 196628, 14, 131075, 196629, 14, 65539, 196630, 14, 65538, 196631, 14, 131074, 196632, 14, 65539, 196633, 14, 65537, 196634, 14, 65538, 196635, 14, 131074, 196636, 14, 131075, 196637, 14, 131076, 262144, 14, 131072, 262145, 14, 65539, 262146, 14, 131073, 262147, 14, 65538, 262148, 14, 65537, 262149, 14, 131074, 262150, 14, 131074, 262151, 14, 131073, 262152, 14, 65540, 262153, 8, 0, 262154, 8, 0, 262155, 0, 0, 262156, 14, 0, 262157, 14, 2, 262158, 14, 2, 262159, 14, 0, 262160, 14, 131073, 262161, 14, 65540, 262162, 7, 0, 262163, 14, 65536, 262164, 14, 131075, 262165, 14, 0, 262166, 14, 196611, 262167, 14, 196610, 262168, 14, 196609, 262169, 14, 196610, 262170, 14, 196610, 262171, 14, 196611, 262172, 14, 0, 262173, 14, 65540, 327680, 14, 131072, 327681, 14, 131074, 327682, 14, 65538, 327683, 14, 65537, 327684, 14, 65539, 327685, 14, 131074, 327686, 14, 131075, 327687, 14, 65538, 327688, 14, 0, 327689, 14, 2, 327690, 14, 3, 327691, 14, 2, 327692, 14, 0, 327693, 14, 65537, 327694, 14, 131074, 327695, 14, 131073, 327696, 14, 65539, 327697, 14, 131076, 327698, 8, 0, 327699, 14, 65536, 327700, 14, 65539, 327701, 14, 65540, 327702, 10, 0, 327703, 12, 0, 327704, 12, 0, 327705, 12, 0, 327706, 12, 0, 327707, 11, 0, 327708, 14, 131072, 327709, 14, 131076, 393216, 14, 65536, 393217, 14, 65539, 393218, 14, 131074, 393219, 14, 131073, 393220, 14, 131074, 393221, 14, 131074, 393222, 14, 131073, 393223, 14, 131075, 393224, 14, 131073, 393225, 14, 65537, 393226, 14, 65539, 393227, 14, 131074, 393228, 14, 131075, 393229, 14, 131074, 393230, 14, 65537, 393231, 14, 65537, 393232, 14, 131074, 393233, 14, 0, 393234, 14, 2, 393235, 14, 0, 393236, 14, 65538, 393237, 14, 65540, 393238, 4, 0, 393239, 14, 0, 393240, 14, 3, 393241, 14, 1, 393242, 14, 4, 393243, 1, 0, 393244, 14, 65536, 393245, 14, 131076, 458752, 14, 196608, 458753, 14, 196611, 458754, 14, 196611, 458755, 14, 196611, 458756, 14, 196610, 458757, 14, 196609, 458758, 14, 196609, 458759, 14, 0, 458760, 14, 131075, 458761, 14, 131073, 458762, 14, 65539, 458763, 14, 131074, 458764, 14, 0, 458765, 14, 196609, 458766, 14, 196609, 458767, 14, 196609, 458768, 14, 196611, 458769, 14, 196610, 458770, 14, 196610, 458771, 14, 196611, 458772, 14, 0, 458773, 14, 131076, 458774, 4, 0, 458775, 14, 65536, 458776, 14, 131073, 458777, 14, 65537, 458778, 14, 131076, 458779, 1, 0, 458780, 14, 131072, 458781, 14, 65540, 524288, 13, 0, 524289, 13, 0, 524290, 12, 0, 524291, 13, 0, 524292, 13, 0, 524293, 8, 0, 524294, 0, 0, 524295, 14, 65536, 524296, 14, 65537, 524297, 14, 65537, 524298, 14, 65538, 524299, 14, 65538, 524300, 14, 131076, 524301, 13, 0, 524302, 13, 0, 524303, 8, 0, 524304, 0, 0, 524305, 13, 0, 524306, 0, 0, 524307, 8, 0, 524308, 14, 131072, 524309, 14, 131076, 524310, 4, 0, 524311, 14, 196608, 524312, 14, 196610, 524313, 14, 196611, 524314, 14, 196612, 524315, 3, 0, 524316, 14, 65536, 524317, 14, 131076, 589824, 14, 0, 589825, 14, 2, 589826, 14, 3, 589827, 14, 3, 589828, 14, 2, 589829, 14, 1, 589830, 14, 3, 589831, 14, 0, 589832, 14, 65539, 589833, 14, 131075, 589834, 14, 65539, 589835, 14, 131074, 589836, 14, 0, 589837, 14, 2, 589838, 14, 2, 589839, 14, 2, 589840, 14, 2, 589841, 14, 1, 589842, 14, 3, 589843, 14, 2, 589844, 14, 0, 589845, 14, 131076, 589846, 8, 0, 589847, 8, 0, 589848, 8, 0, 589849, 8, 0, 589850, 8, 0, 589851, 8, 0, 589852, 14, 65536, 589853, 14, 131076, 655360, 14, 131072, 655361, 14, 131074, 655362, 14, 65538, 655363, 14, 65538, 655364, 14, 65539, 655365, 14, 0, 655366, 14, 196611, 655367, 14, 0, 655368, 14, 131074, 655369, 14, 131075, 655370, 14, 131074, 655371, 14, 0, 655372, 14, 196609, 655373, 14, 196611, 655374, 14, 196610, 655375, 14, 196611, 655376, 14, 196611, 655377, 14, 196609, 655378, 14, 0, 655379, 14, 65537, 655380, 14, 131073, 655381, 14, 0, 655382, 14, 1, 655383, 14, 2, 655384, 14, 2, 655385, 14, 2, 655386, 14, 3, 655387, 14, 1, 655388, 14, 0, 655389, 14, 65540, 720896, 14, 65536, 720897, 14, 131075, 720898, 14, 65539, 720899, 14, 65539, 720900, 14, 65539, 720901, 14, 131076, 720902, 10, 0, 720903, 14, 65536, 720904, 14, 65537, 720905, 14, 131074, 720906, 14, 65537, 720907, 14, 65540, 720908, 8, 0, 720909, 8, 0, 720910, 8, 0, 720911, 8, 0, 720912, 8, 0, 720913, 11, 0, 720914, 14, 65536, 720915, 14, 65539, 720916, 14, 65537, 720917, 14, 65537, 720918, 14, 65537, 720919, 14, 131073, 720920, 14, 65539, 720921, 14, 65539, 720922, 14, 131075, 720923, 14, 65538, 720924, 14, 65538, 720925, 14, 65540, 786432, 14, 65536, 786433, 14, 131073, 786434, 14, 65539, 786435, 14, 131075, 786436, 14, 65537, 786437, 14, 65540, 786438, 4, 0, 786439, 14, 131072, 786440, 14, 65539, 786441, 14, 131075, 786442, 14, 131075, 786443, 14, 0, 786444, 14, 1, 786445, 14, 1, 786446, 14, 1, 786447, 14, 2, 786448, 14, 4, 786449, 3, 0, 786450, 14, 131072, 786451, 14, 131075, 786452, 14, 131073, 786453, 14, 65537, 786454, 14, 65539, 786455, 14, 131074, 786456, 14, 65537, 786457, 14, 65538, 786458, 14, 131075, 786459, 14, 65538, 786460, 14, 131073, 786461, 14, 131076, 851968, 14, 131072, 851969, 14, 65539, 851970, 14, 131074, 851971, 14, 131074, 851972, 14, 65539, 851973, 14, 131076, 851974, 4, 0, 851975, 14, 65536, 851976, 14, 131074, 851977, 14, 65539, 851978, 14, 131074, 851979, 14, 65539, 851980, 14, 131073, 851981, 14, 131075, 851982, 14, 131075, 851983, 14, 131074, 851984, 14, 65540, 851985, 3, 0, 851986, 14, 65536, 851987, 14, 65538, 851988, 14, 131075, 851989, 14, 65539, 851990, 14, 65539, 851991, 14, 65539, 851992, 14, 65538, 851993, 14, 65539, 851994, 14, 65537, 851995, 14, 131073, 851996, 14, 65538, 851997, 14, 131076, 917504, 14, 131072, 917505, 14, 65537, 917506, 14, 131073, 917507, 14, 131074, 917508, 14, 131074, 917509, 14, 131076, 917510, 4, 0, 917511, 14, 131072, 917512, 14, 131075, 917513, 14, 65538, 917514, 14, 65538, 917515, 14, 65537, 917516, 14, 131074, 917517, 14, 131075, 917518, 14, 131074, 917519, 14, 65539, 917520, 14, 65540, 917521, 3, 0, 917522, 14, 65536, 917523, 14, 65539, 917524, 14, 65537, 917525, 14, 131074, 917526, 14, 131073, 917527, 14, 131074, 917528, 14, 131073, 917529, 14, 131073, 917530, 14, 65537, 917531, 14, 131074, 917532, 14, 65539, 917533, 14, 65540, 983040, 14, 196608, 983041, 14, 196610, 983042, 14, 196611, 983043, 14, 196611, 983044, 14, 196610, 983045, 14, 196612, 983046, 4, 0, 983047, 14, 196608, 983048, 14, 196609, 983049, 14, 196609, 983050, 14, 196610, 983051, 14, 196609, 983052, 14, 196611, 983053, 14, 196610, 983054, 14, 196609, 983055, 14, 196610, 983056, 14, 196612, 983057, 3, 0, 983058, 14, 196608, 983059, 14, 196609, 983060, 14, 196609, 983061, 14, 196609, 983062, 14, 196610, 983063, 14, 196609, 983064, 14, 196609, 983065, 14, 196609, 983066, 14, 196609, 983067, 14, 196611, 983068, 14, 196609, 983069, 14, 196612 )

[node name="quit" type="Button" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 36.0
text = "quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="Button" parent="."]
margin_left = 24.0
margin_top = 88.0
margin_right = 79.0
margin_bottom = 108.0
text = "level 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="Button" parent="."]
margin_left = 200.0
margin_top = 88.0
margin_right = 255.0
margin_bottom = 108.0
text = "level 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level3" type="Button" parent="."]
margin_left = 360.0
margin_top = 104.0
margin_right = 415.0
margin_bottom = 124.0
text = "level 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level4" type="Button" parent="."]
margin_left = 16.0
margin_top = 216.0
margin_right = 71.0
margin_bottom = 236.0
text = "level 4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level5" type="Button" parent="."]
margin_left = 168.0
margin_top = 216.0
margin_right = 223.0
margin_bottom = 236.0
text = "level 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toggle-music" type="Button" parent="."]
margin_left = 320.0
margin_top = 24.0
margin_right = 414.0
margin_bottom = 44.0
text = "toggle music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="."]
margin_left = 352.0
margin_top = 208.0
margin_right = 440.0
margin_bottom = 228.0
text = "credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 24, 168 )
scale = Vector2( 2, 2 )
fliph = true

[node name="enemy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 208, 24 )
scale = Vector2( 2, 2 )
fliph = true
firing = false

[node name="enemy3" parent="." instance=ExtResource( 3 )]
position = Vector2( 440, 56 )
rotation = -3.14159
scale = Vector2( 2, 2 )
start_delay = 0.5

[node name="enemy4" parent="." instance=ExtResource( 3 )]
position = Vector2( 320, 228 )
rotation = -1.57079
scale = Vector2( 2, 2 )
start_delay = 1.0

[node name="enemy5" parent="." instance=ExtResource( 3 )]
position = Vector2( 128, 124 )
rotation = 1.57079
scale = Vector2( 2, 2 )
start_delay = 0.75

[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="level1" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level3_pressed"]
[connection signal="pressed" from="level4" to="." method="_on_level4_pressed"]
[connection signal="pressed" from="level5" to="." method="_on_level5_pressed"]
[connection signal="pressed" from="toggle-music" to="." method="_on_level6_pressed"]
[connection signal="pressed" from="credits" to="." method="_on_credits_pressed"]
